crates/uselesskey-ecdsa/tests/snapshots/snapshots_ecdsa__corrupt_pem_bad_header.snap
---
source: crates/uselesskey-ecdsa/tests/snapshots_ecdsa.rs
expression: entries
---
- curve: P-256
  variant: BadHeader
  contains_begin_private_key: false
  contains_begin_corrupted: true
  differs_from_good: true
- curve: P-384
  variant: BadHeader
  contains_begin_private_key: false
  contains_begin_corrupted: true
  differs_from_good: true
