crates/uselesskey-ecdsa/tests/snapshots/snapshots_ecdsa__ecdsa_corrupt_pem_variants.snap
---
source: crates/uselesskey-ecdsa/tests/snapshots_ecdsa.rs
expression: results
---
- variant: BadBase64
  differs_from_original: true
- variant: BadHeader
  differs_from_original: true
- variant: BadFooter
  differs_from_original: true
- variant: ExtraBlankLine
  differs_from_original: true
