crates/uselesskey-ecdsa/tests/snapshots/snapshots_ecdsa__ecdsa_p256_private_pem_shape.snap
---
source: crates/uselesskey-ecdsa/tests/snapshots_ecdsa.rs
expression: shape
---
first_line: "-----BEGIN PRIVATE KEY-----"
last_line: "-----END PRIVATE KEY-----"
line_count: 5
total_len: 241
