crates/uselesskey-ecdsa/tests/snapshots/snapshots_ecdsa__ecdsa_p384_pem_shape.snap
---
source: crates/uselesskey-ecdsa/tests/snapshots_ecdsa.rs
expression: result
---
label: snapshot-p384
curve: P-384
private_pem_starts_with: "-----BEGIN PRIVATE KEY-----"
private_pem_ends_with: "-----END PRIVATE KEY-----"
private_pem_line_count: 6
public_pem_starts_with: "-----BEGIN PUBLIC KEY-----"
public_pem_ends_with: "-----END PUBLIC KEY-----"
public_pem_line_count: 5
private_der_len: 185
public_der_len: 120
