crates/uselesskey-ecdsa/tests/snapshots/snapshots_ecdsa__label_divergence.snap
---
source: crates/uselesskey-ecdsa/tests/snapshots_ecdsa.rs
expression: entries
---
- curve: P-256
  private_keys_differ: true
  public_keys_differ: true
- curve: P-384
  private_keys_differ: true
  public_keys_differ: true
